--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "homepage": "https://github.com/GuzzDoritos/webpack-template#readme",
   "dependencies": {
     "css-loader": "^7.1.2",
+    "date-fns": "^4.1.0",
     "html-webpack-plugin": "^5.6.3",
     "style-loader": "^4.0.0",
     "webpack": "^5.98.0",
