--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "homepage": "https://github.com/GuzzDoritos/webpack-template#readme",
   "dependencies": {
+    "boxicons": "^2.1.4",
     "css-loader": "^7.1.2",
     "date-fns": "^4.1.0",
     "html-webpack-plugin": "^5.6.3",
